# network-disk-server

./: CMakeLists.txt  README.md  make.sh  nohup.out  prometheus.yml
code/cmd/: clientMain.cpp  serverMain.cpp
code/include/: file_sys.h  gflag_def.h  logger.h  mmysql.h  public.h
code/include/long_connect/: brpc_client.h  long_connection.h  upload_rpc.h
code/include/short_connect/: control.h  mpthread.h  register_view.h  short_connection.h  view.h
code/proto/: NetDisk.pb.cc  NetDisk.pb.h  NetDisk.proto
code/src/: file_sys.cpp  md5.cpp  mmsql.cpp  public.cpp
code/src/long_connect/: brpc_client.cpp  long_connection.cpp  upload_rpc.cpp
code/src/short_connect/: control.cpp  mpthread.cpp  register_view.cpp  short_connection.cpp  view.cpp
demo/brpc/: client.cpp  echo.pb.cc  echo.pb.h  echo.proto  server.cpp
demo/file_sys/: file_sys.cpp
demo/glog/: glog.cpp  glog_demo.cpp
demo/json/: a.out  test.cpp
demo/md5/: calMd5.cpp  md5.h  test.cpp
demo/pipe/: a.out  pipe_name.cpp  pipe_unname.cpp
docs/: 项目进度.md
docs/环境搭建/: 1.安装镜像.md  2.配置命令行.md  3.vim配置.md  4.git配置.md  CMake.md  brpc.md  glog.md  备份
docs/设计文档/: question.md  大规模网盘系统设计文档.md
